# my_country

./: .gitignore  Cargo.toml  README.md  build.rs  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  update.yml
benches/: main.rs  parsing.rs
data/: currencies.csv
src/: lib.rs
tests/: integration_tests.rs
